yapis/lab3/compiled_grammar/ExprParser.js
// Generated from ExprParser.g4 by ANTLR 4.12.0
// jshint ignore: start
import antlr4 from 'antlr4';
import ExprParserListener from './ExprParserListener.js';
import ExprParserVisitor from './ExprParserVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class ExprParser extends antlr4.Parser {

    static grammarFileName = "ExprParser.g4";
    static literalNames = [ null, "'&&'", "'||'", "'!'", "'='", "','", "';'", 
                            "':'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                            "'+'", "'-'", "'*'", "'/'", "'''", "'\"'", "'function'", 
                            "'return'", "'iterate'", "'track'", "'EL'", 
                            "'INDEX'", "'as'", "'=='", "'>'", "'<'", "'!='", 
                            "'if'", "'then'", "'else'" ];
    static symbolicNames = [ null, "AND", "OR", "NOT", "ASSIGN", "COMMA", 
                             "SEMI", "COLON", "LPAREN", "RPAREN", "LCURLY", 
                             "RCURLY", "LSQUARE", "RSQUARE", "ADD", "SUB", 
                             "MUL", "DIV", "SINGLE_QUOTE", "DOUBLE_QUOTE", 
                             "DEF", "RETURN", "ITERATE", "TRACK", "EL", 
                             "INDEX", "AS", "EQ", "GREATER", "LESS", "NOEQ", 
                             "IF", "THEN", "ELSE", "END", "INT", "ID", "WS" ];
    static ruleNames = [ "program", "statement", "assignment", "function", 
                         "call", "cycle", "if", "control", "char", "string", 
                         "strarray", "operand", "condition", "expr", "comment" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = ExprParser.ruleNames;
        this.literalNames = ExprParser.literalNames;
        this.symbolicNames = ExprParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 13:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 2);
    		case 1:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, ExprParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 33;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===20) {
	            this.state = 30;
	            this.function_();
	            this.state = 35;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 39;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 2152468488) !== 0) || _la===35 || _la===36) {
	            this.state = 36;
	            this.statement();
	            this.state = 41;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 42;
	        this.match(ExprParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, ExprParser.RULE_statement);
	    var _la = 0;
	    try {
	        this.state = 54;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 44;
	            this.expr(0);
	            this.state = 45;
	            this.match(ExprParser.SEMI);
	            this.state = 47;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===17) {
	                this.state = 46;
	                this.comment();
	            }

	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 49;
	            this.control();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 50;
	            this.assignment();
	            this.state = 52;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===17) {
	                this.state = 51;
	                this.comment();
	            }

	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignment() {
	    let localctx = new AssignmentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, ExprParser.RULE_assignment);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 56;
	        this.match(ExprParser.ID);
	        this.state = 61;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===5) {
	            this.state = 57;
	            this.match(ExprParser.COMMA);
	            this.state = 58;
	            this.match(ExprParser.ID);
	            this.state = 63;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 64;
	        this.match(ExprParser.ASSIGN);
	        this.state = 65;
	        this.expr(0);
	        this.state = 70;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===5) {
	            this.state = 66;
	            this.match(ExprParser.COMMA);
	            this.state = 67;
	            this.expr(0);
	            this.state = 72;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 73;
	        this.match(ExprParser.SEMI);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	function_() {
	    let localctx = new FunctionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, ExprParser.RULE_function);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 75;
	        this.match(ExprParser.DEF);
	        this.state = 76;
	        this.match(ExprParser.ID);
	        this.state = 77;
	        this.match(ExprParser.LPAREN);
	        this.state = 86;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 790536) !== 0) || _la===35 || _la===36) {
	            this.state = 78;
	            this.expr(0);
	            this.state = 83;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===5) {
	                this.state = 79;
	                this.match(ExprParser.COMMA);
	                this.state = 80;
	                this.expr(0);
	                this.state = 85;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 88;
	        this.match(ExprParser.RPAREN);
	        this.state = 89;
	        this.match(ExprParser.COLON);
	        this.state = 93;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 2152468488) !== 0) || _la===35 || _la===36) {
	            this.state = 90;
	            this.statement();
	            this.state = 95;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 96;
	        this.match(ExprParser.RETURN);
	        this.state = 97;
	        this.expr(0);
	        this.state = 98;
	        this.match(ExprParser.SEMI);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	call() {
	    let localctx = new CallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, ExprParser.RULE_call);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 100;
	        this.match(ExprParser.ID);
	        this.state = 101;
	        this.match(ExprParser.LPAREN);
	        this.state = 110;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 790536) !== 0) || _la===35 || _la===36) {
	            this.state = 102;
	            this.expr(0);
	            this.state = 107;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===5) {
	                this.state = 103;
	                this.match(ExprParser.COMMA);
	                this.state = 104;
	                this.expr(0);
	                this.state = 109;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 112;
	        this.match(ExprParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cycle() {
	    let localctx = new CycleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, ExprParser.RULE_cycle);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this.match(ExprParser.ITERATE);
	        this.state = 115;
	        this.match(ExprParser.ID);
	        this.state = 116;
	        this.match(ExprParser.TRACK);
	        this.state = 127;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 117;
	            _la = this._input.LA(1);
	            if(!(_la===24 || _la===25)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 118;
	            this.match(ExprParser.AS);
	            this.state = 119;
	            this.match(ExprParser.ID);
	            break;

	        case 2:
	            this.state = 120;
	            this.match(ExprParser.EL);
	            this.state = 121;
	            this.match(ExprParser.COMMA);
	            this.state = 122;
	            this.match(ExprParser.INDEX);
	            this.state = 123;
	            this.match(ExprParser.AS);
	            this.state = 124;
	            this.match(ExprParser.ID);
	            this.state = 125;
	            this.match(ExprParser.COMMA);
	            this.state = 126;
	            this.match(ExprParser.ID);
	            break;

	        }
	        this.state = 129;
	        this.match(ExprParser.COLON);
	        this.state = 131; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 130;
	            this.statement();
	            this.state = 133; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 2152468488) !== 0) || _la===35 || _la===36);
	        this.state = 135;
	        this.match(ExprParser.END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	if_() {
	    let localctx = new IfContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, ExprParser.RULE_if);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 137;
	        this.match(ExprParser.IF);
	        this.state = 138;
	        this.match(ExprParser.LPAREN);
	        this.state = 139;
	        this.condition();
	        this.state = 140;
	        this.match(ExprParser.RPAREN);
	        this.state = 141;
	        this.match(ExprParser.THEN);
	        this.state = 142;
	        this.match(ExprParser.COLON);
	        this.state = 144; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 143;
	            this.statement();
	            this.state = 146; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 2152468488) !== 0) || _la===35 || _la===36);
	        this.state = 155;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===33) {
	            this.state = 148;
	            this.match(ExprParser.ELSE);
	            this.state = 149;
	            this.match(ExprParser.COLON);
	            this.state = 151; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 150;
	                this.statement();
	                this.state = 153; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 2152468488) !== 0) || _la===35 || _la===36);
	        }

	        this.state = 157;
	        this.match(ExprParser.END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	control() {
	    let localctx = new ControlContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, ExprParser.RULE_control);
	    try {
	        this.state = 161;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 22:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 159;
	            this.cycle();
	            break;
	        case 31:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 160;
	            this.if_();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	char_() {
	    let localctx = new CharContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, ExprParser.RULE_char);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 163;
	        this.match(ExprParser.SINGLE_QUOTE);
	        this.state = 164;
	        this.matchWildcard();
	        this.state = 165;
	        this.match(ExprParser.SINGLE_QUOTE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string() {
	    let localctx = new StringContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, ExprParser.RULE_string);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 167;
	        this.match(ExprParser.DOUBLE_QUOTE);
	        this.state = 171;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,18,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 168;
	                this.matchWildcard(); 
	            }
	            this.state = 173;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,18,this._ctx);
	        }

	        this.state = 174;
	        this.match(ExprParser.DOUBLE_QUOTE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	strarray() {
	    let localctx = new StrarrayContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, ExprParser.RULE_strarray);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 176;
	        this.match(ExprParser.LSQUARE);
	        this.state = 185;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===19) {
	            this.state = 177;
	            this.string();
	            this.state = 182;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===5) {
	                this.state = 178;
	                this.match(ExprParser.COMMA);
	                this.state = 179;
	                this.string();
	                this.state = 184;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 187;
	        this.match(ExprParser.RSQUARE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	operand() {
	    let localctx = new OperandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, ExprParser.RULE_operand);
	    try {
	        this.state = 194;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 36:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 189;
	            this.match(ExprParser.ID);
	            break;
	        case 35:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 190;
	            this.match(ExprParser.INT);
	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 191;
	            this.char_();
	            break;
	        case 19:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 192;
	            this.string();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 193;
	            this.strarray();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condition() {
	    let localctx = new ConditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, ExprParser.RULE_condition);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 196;
	        this.expr(0);
	        this.state = 197;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 2013265920) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 198;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 26;
	    this.enterRecursionRule(localctx, 26, ExprParser.RULE_expr, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 205;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,22,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 201;
	            this.operand();
	            break;

	        case 2:
	            this.state = 202;
	            this.call();
	            break;

	        case 3:
	            this.state = 203;
	            this.match(ExprParser.NOT);
	            this.state = 204;
	            this.expr(3);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 217;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,24,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 215;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,23,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, ExprParser.RULE_expr);
	                    this.state = 207;
	                    if (!( this.precpred(this._ctx, 2))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                    }
	                    this.state = 208;
	                    _la = this._input.LA(1);
	                    if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 245766) !== 0))) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 209;
	                    this.expr(3);
	                    break;

	                case 2:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, ExprParser.RULE_expr);
	                    this.state = 210;
	                    if (!( this.precpred(this._ctx, 1))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                    }
	                    this.state = 211;
	                    this.match(ExprParser.LSQUARE);
	                    this.state = 212;
	                    this.expr(0);
	                    this.state = 213;
	                    this.match(ExprParser.RSQUARE);
	                    break;

	                } 
	            }
	            this.state = 219;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,24,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	comment() {
	    let localctx = new CommentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, ExprParser.RULE_comment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 220;
	        this.match(ExprParser.DIV);
	        this.state = 221;
	        this.match(ExprParser.DIV);
	        this.state = 225;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,25,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 222;
	                this.matchWildcard(); 
	            }
	            this.state = 227;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,25,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

ExprParser.EOF = antlr4.Token.EOF;
ExprParser.AND = 1;
ExprParser.OR = 2;
ExprParser.NOT = 3;
ExprParser.ASSIGN = 4;
ExprParser.COMMA = 5;
ExprParser.SEMI = 6;
ExprParser.COLON = 7;
ExprParser.LPAREN = 8;
ExprParser.RPAREN = 9;
ExprParser.LCURLY = 10;
ExprParser.RCURLY = 11;
ExprParser.LSQUARE = 12;
ExprParser.RSQUARE = 13;
ExprParser.ADD = 14;
ExprParser.SUB = 15;
ExprParser.MUL = 16;
ExprParser.DIV = 17;
ExprParser.SINGLE_QUOTE = 18;
ExprParser.DOUBLE_QUOTE = 19;
ExprParser.DEF = 20;
ExprParser.RETURN = 21;
ExprParser.ITERATE = 22;
ExprParser.TRACK = 23;
ExprParser.EL = 24;
ExprParser.INDEX = 25;
ExprParser.AS = 26;
ExprParser.EQ = 27;
ExprParser.GREATER = 28;
ExprParser.LESS = 29;
ExprParser.NOEQ = 30;
ExprParser.IF = 31;
ExprParser.THEN = 32;
ExprParser.ELSE = 33;
ExprParser.END = 34;
ExprParser.INT = 35;
ExprParser.ID = 36;
ExprParser.WS = 37;

ExprParser.RULE_program = 0;
ExprParser.RULE_statement = 1;
ExprParser.RULE_assignment = 2;
ExprParser.RULE_function = 3;
ExprParser.RULE_call = 4;
ExprParser.RULE_cycle = 5;
ExprParser.RULE_if = 6;
ExprParser.RULE_control = 7;
ExprParser.RULE_char = 8;
ExprParser.RULE_string = 9;
ExprParser.RULE_strarray = 10;
ExprParser.RULE_operand = 11;
ExprParser.RULE_condition = 12;
ExprParser.RULE_expr = 13;
ExprParser.RULE_comment = 14;

class ProgramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ExprParser.RULE_program;
    }

	EOF() {
	    return this.getToken(ExprParser.EOF, 0);
	};

	function_ = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(FunctionContext);
	    } else {
	        return this.getTypedRuleContext(FunctionContext,i);
	    }
	};

	statement = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(StatementContext);
	    } else {
	        return this.getTypedRuleContext(StatementContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof ExprParserListener ) {
	        listener.enterProgram(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ExprParserListener ) {
	        listener.exitProgram(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof ExprParserVisitor ) {
	        return visitor.visitProgram(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class StatementContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ExprParser.RULE_statement;
    }

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};

	SEMI() {
	    return this.getToken(ExprParser.SEMI, 0);
	};

	comment() {
	    return this.getTypedRuleContext(CommentContext,0);
	};

	control() {
	    return this.getTypedRuleContext(ControlContext,0);
	};

	assignment() {
	    return this.getTypedRuleContext(AssignmentContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof ExprParserListener ) {
	        listener.enterStatement(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ExprParserListener ) {
	        listener.exitStatement(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof ExprParserVisitor ) {
	        return visitor.visitStatement(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AssignmentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ExprParser.RULE_assignment;
    }

	ID = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(ExprParser.ID);
	    } else {
	        return this.getToken(ExprParser.ID, i);
	    }
	};


	ASSIGN() {
	    return this.getToken(ExprParser.ASSIGN, 0);
	};

	expr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExprContext);
	    } else {
	        return this.getTypedRuleContext(ExprContext,i);
	    }
	};

	SEMI() {
	    return this.getToken(ExprParser.SEMI, 0);
	};

	COMMA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(ExprParser.COMMA);
	    } else {
	        return this.getToken(ExprParser.COMMA, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof ExprParserListener ) {
	        listener.enterAssignment(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ExprParserListener ) {
	        listener.exitAssignment(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof ExprParserVisitor ) {
	        return visitor.visitAssignment(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FunctionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ExprParser.RULE_function;
    }

	DEF() {
	    return this.getToken(ExprParser.DEF, 0);
	};

	ID() {
	    return this.getToken(ExprParser.ID, 0);
	};

	LPAREN() {
	    return this.getToken(ExprParser.LPAREN, 0);
	};

	RPAREN() {
	    return this.getToken(ExprParser.RPAREN, 0);
	};

	COLON() {
	    return this.getToken(ExprParser.COLON, 0);
	};

	RETURN() {
	    return this.getToken(ExprParser.RETURN, 0);
	};

	expr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExprContext);
	    } else {
	        return this.getTypedRuleContext(ExprContext,i);
	    }
	};

	SEMI() {
	    return this.getToken(ExprParser.SEMI, 0);
	};
